@@ -535,10 +535,10 @@ bool InputParam::InputParamCheck()
 
   //DFI出力のチェック、出力するDFIファイル名のチェック
   if( m_output_dfi_on ) {
-    //DFI出力がSPH，BOV以外で指定された場合はエラー
-    //if( m_out_format != CDM::E_CDM_FMT_SPH && m_out_format != CDM::E_CDM_FMT_BOV ) {
-    //if( m_out_format != CDM::E_CDM_FMT_SPH && m_out_format != CDM::E_CDM_FMT_BOV && m_out_format != CDM::E_CDM_FMT_PLOT3D) {
-    if( m_out_format == CDM::E_CDM_FMT_AVS ) {
+    //DFI出力がSPH，BOV,PLOT3D以外で指定された場合はエラー
+    if( m_out_format != CDM::E_CDM_FMT_SPH &&
+        m_out_format != CDM::E_CDM_FMT_BOV &&
+        m_out_format != CDM::E_CDM_FMT_PLOT3D ) {
       printf("\tCan't output dfi OutputFormat. %s\n",Get_OutputFormat_string().c_str());
       ierr=false;
     }
